--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9"
+    "knex": "^0.21.8",
+    "mysql": "^2.18.1"
   }
 }
